--- a/_static/style.css
+++ b/_static/style.css
@@ -1,3 +1,11 @@
 body {
-  'PT Sans', Helvetica, Arial, sans-serif;
+  'Open Sans', 'PT Sans', Helvetica, Arial, sans-serif;
+}
+
+header h1 {
+  font-size: 1.5em;
+}
+
+header h2 {
+  font-size: 1.2em;
 }
