--- a/blog/html/_static/style.css
+++ b/blog/html/_static/style.css
@@ -1,5 +1,5 @@
 body {
-  'Open Sans', 'PT Sans', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'PT Sans', Helvetica, Arial, sans-serif;
 }
 
 header h1 {
