--- a/_static/style.css
+++ b/_static/style.css
@@ -3,9 +3,13 @@ body {
 }
 
 header h1 {
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 header h2 {
   font-size: 1.2em;
+}
+
+h1 {
+  font-size: 1.6em;
 }
