--- a/_static/style.css
+++ b/_static/style.css
@@ -1,3 +1,4 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans');
 body {
   font-size: 0.8em;
   font-family: 'Open Sans', 'PT Sans', Helvetica, Arial, sans-serif;
