--- a/_static/style.css
+++ b/_static/style.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400italic,500,600');
 
 body {
   font-size: 1em;
